修改js引用路径解决点击事件失效问题,修改社交链接，修改配置

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,6 +9,8 @@
             {% endif %}
         </p>
         <br/>
+        <br/>
+
         <p class="contact">
             Contact me at: {% if site.github_username %}
             <a href="https://github.com/{{site.github_username}}" title="GitHub">
@@ -29,8 +31,8 @@
                 <i class="fa fa-twitter" aria-hidden="true"></i></a>
             {% endif %}
             {% if site.facebook_username %}
-            <a href="https://www.facebook.com/{{site.facebook_username}}" title="Facebook"><i
-                    class="fa fa-facebook-official" aria-hidden="true"></i></a>
+            <a href="https://www.facebook.com/{{site.facebook_username}}" title="Facebook">
+                <i class="fa fa-facebook-official" aria-hidden="true"></i></a>
             {% endif %}
             {% if site.linkedIn_username %}
             <a href="https://www.linkedin.com/in/{{site.linkedIn_username}}" title="LinkedIn">
@@ -41,14 +43,19 @@
                 <i class="fa fa-dribbble" aria-hidden="true"></i></a>
             {% endif %}
         </p>
+        <br/>
+        <br/>
+
         <p>
             本站总访问量<span id="busuanzi_value_site_pv"></span>次，本站访客数<span id="busuanzi_value_site_uv"></span>人次，本文总阅读量
             <span id="busuanzi_value_page_pv"></span>次
         </p>
+        <br/>
         <p class="power">
             <span>
                 Site powered by <a href="https://jekyllrb.com/">Jekyll</a> & <a href="https://pages.github.com/">Github Pages</a>.
             </span>
+            <br/>
             <span>
                 Theme reference from <a href="https://github.com/Gaohaoyang">HyG</a>.
             </span>
