--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -11,6 +11,7 @@
     width: 1140px;
     box-sizing: border-box;
     margin: 0 auto;
+    margin-bottom: 50px;
     // word-break: break-all;
     .left {
         width: 75%;
