--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,8 +7,8 @@
     <meta name="description"
           content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
-    <link rel="shortcut icon" href="{{'/favicon.ico?'| prepend: site.baseurl}}" type="image/x-icon">
-    <link rel="icon" href="{{'/favicon.ico?'| prepend: site.baseurl}}" type="image/x-icon">
+    <link rel="shortcut icon" href="{{'/favicon.ico'| prepend: site.baseurl}}" type="image/x-icon">
+    <link rel="icon" href="{{'/favicon.ico'| prepend: site.baseurl}}" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://at.alicdn.com/t/font_8v3czwksspqlg14i.css">
     <link rel="stylesheet" href="{{ '/css/main.css' | prepend: site.baseurl }}">
