1.修改标题简介。2、修改about内容3、修改主题配色 4、新增文章 5、新增百度分享代码

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -51,6 +51,8 @@
             <span id="busuanzi_value_page_pv"></span>次
         </p>
         <br/>
+    </div>
+    <div class="wrapper_power">
         <p class="power">
             <span>
                 Site powered by <a href="https://jekyllrb.com/">Jekyll</a> & <a href="https://pages.github.com/">Github Pages</a>.
