--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,8 @@
                         {% else %}
                     <a href="{{site.baseurl}}/">
                     {% endif %}
-                        <i class="fa fa-home"></i>Home
+                        <!--<i class="fa fa-home"></i>-->
+                        Home
                     </a>
                 </li>
 
@@ -23,7 +24,8 @@
                             {% else %}
                         <a href="{{ my_page.url | prepend: site.baseurl }}">
                         {% endif %}
-                            <i class="fa fa-{{my_page.icon}}"></i>{{ my_page.title }}
+                            <!--<i class="fa fa-{{my_page.icon}}"></i>-->
+                            {{ my_page.title }}
                         </a>
                     </li>
                     {% endif %}
