--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,9 +8,12 @@
     {% include header.html %}
 
         {{ content }}
-
     {% include footer.html %}
     {% include backToTop.html %}
+    <!--百度分享script-->
+    <script>
+      window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"2","bdPic":"","bdStyle":"0","bdSize":"16"},"share":{},"image":{"viewList":["qzone","tsina","tqq","renren","weixin"],"viewText":"分享到：","viewSize":"16"},"selectShare":{"bdContainerClass":null,"bdSelectMiniList":["qzone","tsina","tqq","renren","weixin"]}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];
+    </script>
     <script src="{{ '/js/main.js' | prepend: site.baseurl }}" charset="utf-8"></script>
     <script src="{{ '/js/smooth-scroll.min.js' | prepend: site.baseurl }}" charset="utf-8"></script>
     <script type="text/javascript">
