--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -20,6 +20,8 @@ layout: default
                 <ul id="content-side" class="content-ul">
                 </ul>
             </div>
+            {% include share.html %}
+
             <!-- 其他div框放到这里 -->
             <!-- <div class="side">bbbb</div> -->
         </div>
