--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -85,6 +85,8 @@ layout: default
                     <li><a href="#comments">Comments</a></li>
                 </ul>
             </div>
+            {% include share.html %}
+
             <!-- 其他div框放到这里 -->
             <!-- <div class="side">bbbb</div> -->
         </div>
