--- a/_sass/_backToTop.scss
+++ b/_sass/_backToTop.scss
@@ -3,28 +3,37 @@
     left: 50%;
     margin-left: 580px;
     bottom: 37px;
-    background-color: #f8f8fd;
+    background-color: #fff;
+    box-shadow: 0 0px 10px 2px rgba(0,0,0,0.1);
     visibility: hidden;
     opacity: 0;
     transition: 0.4s ease;
-    box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.3), 0 0 30px rgba(10, 10, 0, 0.1) inset;
     a {
         display: block;
-        background-color: #eee;
+        background-color: #fff;
         width: 38px;
         height: 38px;
         line-height: 38px;
         text-align: center;
         font-size: 20px;
-        color: #b4b4b4;
+        color: rgba(0,0,0,0.88);
+        border-radius:3px;
     }
+    border-radius:3px;
+
 }
 .back-to-top-show{
     visibility: visible;
-    opacity: 0.7;
+    opacity: 1;
     &:hover{
-        opacity: 1
     }
+    a{
+     &:hover{
+            color: #1c79c0;
+        }
+    }
+    border-radius:3px;
+
 }
 @media screen and (max-width:1200px) and (min-width: 770px) {
     .back-to-top {
