--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -6,9 +6,9 @@
 
     text-align: center;
     // margin-top: 50px;
-    background-color: #2b2b3c;
-    box-shadow: 0 -2px 4px 1px rgba(0,0,0,0.5);
-    color: #bbb;
+    background-color: #263238;
+    box-shadow: 0 -20px 20px 1px rgba(0,0,0,0.08);
+    color: #f1f1f1;
     .wrapper {
         width: 1140px;
         margin: 0 auto;
@@ -36,14 +36,23 @@
         .description {
             display: inline-block;
         }
+
+    }
+    .wrapper_power{
+        background: #455a64;
+        line-height:30px;
+        padding: 10px;
+        p{
+          margin:0;
+        }
         .power {
-            a {
-                color: #8F90C5;
-                transition: 0.3s ease;
-                &:hover {
-                    color: #fff;
-                }
+          a {
+            color: #8F90C5;
+            transition: 0.3s ease;
+            &:hover {
+                color: #fff;
             }
+          }
         }
     }
 }
