--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -1,15 +1,20 @@
 header {
-    background: #1a237e;
+    position:fixed;
+    top:0;
+    z-index:1000;
+    background: #fff;
     height: 52px;
-    color: #ff9800;
-    box-shadow: 0 2px 4px 1px rgba(0,0,0,0.5);
-    margin-bottom: 20px;
+    width:100%;
+    color:rgba(0, 0, 0, 0.54);
+
+    box-shadow: 0 0px 40px 1px rgba(0,0,0,0.1);
+    margin-bottom: 120px;
     a {
-        color: #9d9d9d;
+        color:rgba(0, 0, 0, 0.54);
         -webkit-transition: 0.2s ease;
         transition: 0.2s ease;
         &:hover {
-            color: #fff;
+            color: #1c79c0;
         }
     }
     .wrapper {
@@ -17,6 +22,7 @@ header {
         margin: 0 auto;
         line-height: 52px;
         .brand {
+            color: #1c79c0;
             font-size: 18px;
         }
         small {
@@ -34,7 +40,8 @@ header {
                 padding: 0;
                 li {
                     list-style: none;
-                    font-size: 14px;
+                    font-size: 16px;
+                    font-weight: 400;
                     display: inline-block;
                     -webkit-transition: 0.2s ease;
                     transition: 0.2s ease;
@@ -43,16 +50,15 @@ header {
                         padding: 0 10px;
                         height: 52px;
                         &:hover {
-                            background-color: #000;
+
                         }
                         i {
                             margin-right: 5px;
                         }
                     }
                     >.active {
-                        color: #fff;
-                        background-color: #000;
-                        box-shadow: 0 25px 25px -15px rgba(255,255,255,0.93);
+                        color: #1c79c0;
+                        border-bottom:3px solid #3367d6;
                     }
                 }
             }
@@ -115,17 +121,19 @@ header {
                 right: 0;
                 top:10px;
                 padding: 5px 10px;
-                background: #333;
-                border: 1px solid #333;
+                background: #fff;
+                box-shadow: 0 3px 20px 0px rgba(0,0,0,0.075);
+
                 border-radius: 4px;
-                color: #c9c9c9;
+                color:rgba(0, 0, 0, 0.54);
+
                 font-size: 17px;
                 -webkit-transition: 0.4s ease;
                 transition: 0.4s ease;
             }
             >.active{
-                background: #000;
-                color: #fff;
+                border-bottom-color:linear-gradient(to right, #1c79c0, #0389ff, #0dd3ff);
+                color: #1c79c0;
             }
             .nav-show{
                 visibility: visible;
@@ -145,13 +153,12 @@ header {
                 opacity: 0;
                 transition: 0.2s cubic-bezier(0.5, 0.1, 0.51, 1.38);
                 ul {
-                    background: #222;
-                    border-radius: 0 0 4px 4px;
-                    box-shadow: 0px 3px 4px 1px rgba(0,0,0,0.5);
+                     background: #fff;
+                     box-shadow: 0 3px 20px 0px rgba(0,0,0,0.075);
+                     border-radius: 0 0 4px 4px;
                     li {
                         font-size: 14px;
                         display: block;
-                        border-bottom: 1px solid #333;
                         a {
                             display: block;
                             padding: 0 10px;
@@ -162,8 +169,8 @@ header {
                             border: none;
                         }
                         >.active {
-                            color: #fff;
-                            background-color: #000;
+                            color: #1c79c0;
+                            border-bottom-color: linear-gradient(to right, #1c79c0, #0389ff, #0dd3ff);
                             box-shadow: none;
                         }
                     }
