--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -8,19 +8,24 @@
     *zoom: 1;
 }
 .page {
+
     width: 1140px;
     box-sizing: border-box;
     margin: 0 auto;
     margin-bottom: 50px;
+    margin-top: 80px;
     // word-break: break-all;
     .left {
+        border-radius:3px;
         width: 75%;
         float: left;
         padding: 20px 30px;
         line-height: 1.6;
         font-size: 16px;
-        background-color: #f8f8fd;
-        box-shadow: 0 1px 2px rgba(0,0,0,0.4),0 0 30px rgba(10,10,0,0.1) inset;
+        background-color: #fff;
+        box-shadow: 0 3px 20px 0px rgba(0,0,0,0.075);
+
+
         >h1 {
             margin-bottom: -10px;
         }
@@ -93,11 +98,12 @@
     .right {
         float: left;
         width: 25%;
+
         padding-left: 20px;
         top: 0;
         .fixed {
             position: fixed;
-            top: 20px;
+            top: 60px;
         }
         .scroll-bottom {
             position: absolute;
@@ -105,8 +111,8 @@
         }
         .side {
             box-sizing: border-box;
-            background-color: #f8f8fd;
-            box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.3), 0 0 30px rgba(10, 10, 0, 0.1) inset;
+            background-color: #fff;
+            box-shadow: 0 3px 20px 0px rgba(0,0,0,0.075);
             padding-bottom: 1px;
             -ms-word-break: break-all;
             word-break: break-all;
@@ -131,6 +137,7 @@
                     color: #223253;
                 }
             }
+            border-radius: 3px;
         }
         .content-ul {
             overflow-y: auto;
@@ -156,6 +163,8 @@
             float: left;
             padding: 10px 14px;
             font-size: 14px;
+            margin-bottom: 30px;
+
             >h1 {
                 font-size: 25px;
                 margin-bottom: -10px;
@@ -185,19 +194,21 @@
                     }
                 }
             }
+
         }
         .anchor {
             display: block;
             visibility: visible;
             position: fixed;
-            top: 76px;
+            top: 100px;
             right: 2.5%;
             padding: 5px 10px;
-            color: #333;
+            color:rgba(0, 0, 0, 0.88);
+            border-radius:3px;
             font-size: 15px;
-            background-color: #f8f8fd;
-            box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.3), 0 0 30px rgba(10, 10, 0, 0.1) inset;
             opacity: 0.7;
+            background-color: #fff;
+            box-shadow: 0 0px 10px 2px rgba(0,0,0,0.1);
             transition: 0.2s cubic-bezier(0.5, 0.1, 0.51, 1.38);
         }
         .anchor-hide {
@@ -225,6 +236,7 @@
         .right-show {
             z-index: 999;
             visibility: visible;
+            top:80px;
             opacity: 1;
             transform: scale(1);
             .content-ul{
