add google adSense

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -57,4 +57,12 @@
             src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
     </script>
     {% endif %}
+	<!--adsense-->
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<script>
+	  (adsbygoogle = window.adsbygoogle || []).push({
+	    google_ad_client: "{{site.google_adsense_id}}",
+	    enable_page_level_ads: true
+	  });
+	</script>
 </head>
