--- a/_sass/_index.scss
+++ b/_sass/_index.scss
@@ -28,7 +28,7 @@
                         i {
                             padding-right: 0;
                             margin-right: 3px;
-                            color: #6b6a6a;
+                            color: #c6cbe9;
                         }
                     }
                     .categories {
@@ -119,7 +119,7 @@
                                 padding: 0 10px;
                                 font-size: 12px;
                                 color: #fff;
-                                background-color: #bbb;
+                                background-color: #c6cbe9;
                                 border-radius: 50%;
                                 transition: 0.5s ease-in-out;
                             }
@@ -132,7 +132,7 @@
                 .content-ul[recent]{
                     padding-bottom: 16px;
                     li{
-                        color:#aaa;
+                        color:#c6cbe9;
                         font-size: 14px;
                     }
                 }
