对于project项目，非github.io主项目时，增加相对寻址 pepend: site.base_url

--- a/_includes/jsdelivr-combine.html
+++ b/_includes/jsdelivr-combine.html
@@ -17,7 +17,7 @@
   {% elsif url contains '//' %}
     <script defer src="{{ url }}"></script>
   {% else %}
-    <script defer src="{{ url | relative_url }}"></script>
+    <script defer src="{{ url | pepend: site.base_url | relative_url }}"></script>
   {% endif %}
 {% endfor %}
 
