--- a/_includes/update-list.html
+++ b/_includes/update-list.html
@@ -29,7 +29,7 @@
       {% for item in update_list %}
         {% assign index = item | split: '::' | last | plus: 0 %}
         {% assign post = site.posts[index] %}
-        {% assign url = post.url | relative_url %}
+        {% assign url = post.url | pepend: site.base_url | relative_url %}
         <li class="text-truncate lh-lg">
           <a href="{{ url }}">{{ post.title }}</a>
         </li>
