--- a/_includes/search-loader.html
+++ b/_includes/search-loader.html
@@ -24,7 +24,7 @@
     SimpleJekyllSearch({
       searchInput: document.getElementById('search-input'),
       resultsContainer: document.getElementById('search-results'),
-      json: '{{ '/assets/js/data/search.json' | pepend: site.base_url | relative_url }}',
+      json: '{{ '/assets/js/data/search.json' | prepend: site.base_url | relative_url }}',
       searchResultTemplate: '{{ result_elem | strip_newlines }}',
       noResultsText: '{{ not_found }}',
       templateMiddleware: function(prop, value, template) {
