update referer error for font

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -94,7 +94,7 @@
 
   {% if page.layout == 'page' or page.layout == 'post' %}
     <!-- Image Popup -->
-    <link rel="stylesheet" href="{{ site.data.origin[type].glightbox.css | prepend: site.base_url | relative_url }}">
+    <link rel="stylesheet" href="{{ site.data.origin[type].glightbox.css | relative_url }}">
   {% endif %}
 
   <!-- Scripts -->
