--- a/_includes/js-selector.html
+++ b/_includes/js-selector.html
@@ -68,7 +68,7 @@
   <!-- MathJax -->
   <script async src="{{ '/assets/js/data/mathjax.js' | prepend: site.base_url | relative_url }}"></script>
   <script async src="https://cdnjs.cloudflare.com/polyfill/v3/polyfill.min.js?features=es6"></script>
-  <script id="MathJax-script" async src="{{ site.data.origin[type].mathjax.js | prepend: site.base_url | relative_url }}"></script>
+  <script id="MathJax-script" async src="{{ site.data.origin[type].mathjax.js | relative_url }}"></script>
 {% endif %}
 
 <!-- Pageviews -->
