try catch 搜索json的加载失败

--- a/_includes/search-loader.html
+++ b/_includes/search-loader.html
@@ -48,7 +48,7 @@
       });
     });
   } catch (error) {
-    console.log("获取搜索数据失败：")
-    console.log(error)
+    console.log("获取搜索数据失败：");
+    console.log(error);
   }
 </script>
