1、主要修复搜索内容json格式错误问题导致无法搜索。2、修复post date，3、添加缺失图片、4头像的placeholder

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,7 +7,9 @@
         {%- capture avatar_url -%}
           {% include media-url.html src=site.avatar %}
         {%- endcapture -%}
-        <img src="{{- avatar_url -}}" width="112" height="112" alt="avatar" onerror="this.style.display='none'">
+        <div style="background-image: url({{ '/assets/img/favicons/android-chrome-512x512.png' | prepend: site.base_url | relative_url }}); background-size: cover;"  width="112" height="112">
+          <img src="{{- avatar_url -}}" width="112" height="112" alt="avatar" onerror="this.style.display='none'">
+        </div>
       {%- endif -%}
     </a>
 
