优化description的字符长度，添加meta keywords，sw不打印过多日志

--- a/_includes/post-description.html
+++ b/_includes/post-description.html
@@ -13,4 +13,4 @@
 {%- endif -%}
 {%- endcapture -%}
 
-{{- description | strip | truncate: max_length | escape -}}
+{{- description | strip | truncate: site.max_length_post_description | escape -}}
