--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -4,7 +4,35 @@
 // ==============================
 
 .pagination {
-    li {
-      margin: 0 0px;
+  li {
+    margin: 0 0px;
+  }
+}
+.pagination li:before, .pagination li:after {
+  background: 0;
+}
+.home[data-home=posts] {
+  .summary {
+    padding-top: 1rem;
+    padding-bottom: .8rem;
+    color: #161209;
+    border-bottom: 1px dashed #f0f0f0;
+
+    .featured-image-preview {
+      width: 100%;
+      position: relative;
+      margin: 0.6rem auto;
+      @include transition(transform 0.4s ease);
+      padding: 50% 0 0 0;
+      img {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        border-radius: 20px; /* 设置圆角 */
+
     }
+    }
+  }
 }
