【sw 修复了许多错误】：1、解决误判 response.status!=200不缓存的问题；2、catch了fetch错误； 【增加统计谷歌，和广告】【自定义了一些黑夜模式的css】 【模版提到上层主项目里】

--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -11,6 +11,9 @@
 .pagination li:before, .pagination li:after {
   background: 0;
 }
+[theme=dark] .pagination li:before, [theme=dark] .pagination li:after {
+    background: 0;
+}
 .home[data-home=posts] {
   .summary {
     padding-top: 1rem;
