--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,11 @@
   {% include head.html %}
 
   <body>
-
-    {% include header.html %}
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TGTH5JGQ"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+      {% include header.html %}
 
         {{ content }}
     {% include footer.html %}
