--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,18 +16,6 @@
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }}"
           href="{{ '/feed.xml ' | prepend: site.baseurl | prepend: site.url }}">
 
-    {% if site.baidu_tongji_id %}
-    <script>
-    // 百度统计代码
-    var _hmt = _hmt || [];
-    (function() {
-      var hm = document.createElement("script");
-      hm.src = "https://hm.baidu.com/hm.js?{{site.baidu_tongji_id}}";
-      var s = document.getElementsByTagName("script")[0];
-      s.parentNode.insertBefore(hm, s);
-    })();
-    </script>
-    {% endif %}
 
     {% if site.google_analytics_id %}
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -40,7 +28,13 @@
       gtag('config', '{{site.google_analytics_id}}');
 
     </script>
-
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+      })(window,document,'script','dataLayer','GTM-TGTH5JGQ');</script>
+      <!-- End Google Tag Manager -->
     {% endif %}
 
     {% if page.mathjax %}
